# amugerna

./: .gitignore  README.md  main.py  pyproject.toml
final_poses/: 0.json  11.json  2.json  3.json  5.json  6.json  7.json  8.json  9.json
ipynb/: birefnet_img.ipynb
