[project]
name = "amugerna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "mediapipe>=0.10.33",
    "python-multipart>=0.0.26",
    "streamlit>=1.56.0",
    "ultralytics>=8.4.37",
    "uvicorn>=0.44.0",
]
