[project]
name = "amugerna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "fastapi>=0.135.3",
    "jupyter>=1.1.1",
    "kornia>=0.8.2",
    "mediapipe>=0.10.33",
    "python-multipart>=0.0.26",
    "streamlit>=1.56.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
    "ultralytics>=8.4.37",
    "uvicorn>=0.44.0",
]
